--- a/index.html
+++ b/index.html
@@ -74,7 +74,16 @@
 <!--    FOOTER    -->
 
 
-    <footer></footer>
+    <footer>
+      <div id="social-links-wrapper">
+        <ul>
+          <li><a href=""><img src="assets/facebook-icon.png" alt=""></a></li>
+          <li><a href=""><img src="assets/linkedin-icon.png" alt=""></a></li>
+          <li><a href=""><img src="assets/twitter-icon.png" alt=""></a></li>
+          <li><a href=""><img src="" alt=""></a></li>
+        </ul>
+      </div>
+    </footer>
 
 </body>
 </html>
