--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <li><a href=""><img src="assets/facebook-icon.png" alt=""></a></li>
           <li><a href=""><img src="assets/linkedin-icon.png" alt=""></a></li>
           <li><a href=""><img src="assets/twitter-icon.png" alt=""></a></li>
-          <li><a href=""><img src="" alt=""></a></li>
+          <li><a href=""><img src="assets/github-icon.svg" alt=""></a></li>
         </ul>
       </div>
     </footer>
