--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
     <footer>
       <div id="social-links-wrapper">
         <ul>
-          <li><a href=""><img src="assets/facebook-icon.png" alt=""></a></li>
-          <li><a href=""><img src="assets/linkedin-icon.png" alt=""></a></li>
-          <li><a href=""><img src="assets/twitter-icon.png" alt=""></a></li>
-          <li><a href=""><img src="assets/github-icon.svg" alt=""></a></li>
+          <li><a href=""><img class="thumb-link" src="assets/facebook-icon.png" alt=""></a></li>
+          <li><a href=""><img class="thumb-link" src="assets/linkedin-icon.png" alt=""></a></li>
+          <li><a href=""><img class="thumb-link" src="assets/twitter-icon.png" alt=""></a></li>
+          <li><a href=""><img class="thumb-link" src="assets/github-icon.svg" alt=""></a></li>
         </ul>
       </div>
     </footer>
